Ajustes menores en index.html

--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -22,7 +22,7 @@ h5{
     font-family: 'Barlow Condensed', sans-serif; // Nav TEXT - subheading 2
 }
 
-.container{
-    margin: 0 auto;
-    width: 86%;
-}
+// .container{
+//     margin: 0 auto;
+//     width: 86%;
+// }
