--- a/css/style.css
+++ b/css/style.css
@@ -21,21 +21,18 @@ h5 {
   font-family: "Barlow Condensed", sans-serif;
 }
 
-.container {
-  margin: 0 auto;
-  width: 86%;
-}
-
 body {
   background-image: url("/assets/home/background-home-mobile.jpg");
   background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
 
 .nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 24px;
+  padding-top: 24px;
   margin-left: 24px;
   margin-right: 24px;
 }
@@ -85,9 +82,9 @@ body {
 .main {
   text-align: center;
   color: hsl(231, 77%, 90%);
+  max-width: 450px;
+  margin: 0 auto;
   margin-top: 48px;
-  margin-left: 24px;
-  margin-right: 24px;
 }
 .main__h5 {
   font-size: 16px;
@@ -109,6 +106,7 @@ body {
   color: hsl(231, 77%, 90%);
   line-height: 25px;
   margin-bottom: 81px;
+  max-width: 444px;
 }
 .main__button {
   font-size: 20px;
