--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,13 +1,15 @@
 body{
     background-image: url('/assets/home/background-home-mobile.jpg');
     background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
 }
 
 .nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 24px;
+    padding-top: 24px;
     margin-left: 24px;
     margin-right: 24px;
 
@@ -78,9 +80,10 @@ body{
 .main{
     text-align: center;
     color: $sky;
+    max-width: 450px;
+    margin: 0 auto;
     margin-top: 48px;
-    margin-left: 24px;
-    margin-right: 24px;
+    // margin-top: 48px;
 
     &__h5{
         font-size: 16px;
@@ -104,6 +107,7 @@ body{
         color: $sky;
         line-height: 25px;
         margin-bottom: 81px;
+        max-width: 444px;
     }
 
     &__button{
