--- a/css/style.css
+++ b/css/style.css
@@ -120,4 +120,29 @@ body {
   text-transform: uppercase;
   font-family: "bellefair";
   margin-bottom: 48px;
+}
+
+.destination {
+  background-image: url("/assets/destination/background-destination-mobile.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.main__destination h2 {
+  text-transform: uppercase;
+  margin-left: 18px;
+}
+.main__destination h2 span {
+  font-weight: 700;
+  color: gray;
+}
+.main__destination .main__img {
+  width: 170px;
+  height: 170px;
+  margin: 0 auto;
+}
+.main__destination .main__img img {
+  width: 100%;
+  height: auto;
 }/*# sourceMappingURL=style.css.map */
