--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -3,6 +3,7 @@ body{
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
+    // height: 100vh;
 }
 
 .nav{
