--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -18,8 +18,25 @@ p{
     font-family: 'Barlow', sans-serif;
 }
 
+// h1{
+//     font-size: $heading-1;
+// }
+
+// h2{
+//     font-size: $heading-2;
+// }
+
+// h3{
+//    font-size: $heading-3; 
+// }
+
+// h4{
+//     font-size: $heading-4;
+// }
+
 h5{
     font-family: 'Barlow Condensed', sans-serif; // Nav TEXT - subheading 2
+    // font-size: $heading-5;
 }
 
 // .container{
