--- a/sass/pages/_destination.scss
+++ b/sass/pages/_destination.scss
@@ -3,10 +3,7 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-}
-
-.nav{
-
+    height: 100vh;
 }
 
 .main__destination{
@@ -15,10 +12,15 @@
     h2{
         text-transform: uppercase;
         margin-left: 18px;
+        font-size: 16px;
+        font-family: 'Barlow Condensed', sans-serif;
+        letter-spacing: 2.7px;
+        margin-bottom: 32px;
 
         span{
             font-weight: 700;
             color: gray;
+            margin-right: 18px;
         }
     }
 
@@ -26,10 +28,67 @@
         width: 170px;
         height: 170px;
         margin: 0 auto;
+        margin-bottom: 26px;
 
         img{
             width: 100%;
             height: auto;
+        }
+    }
+
+    .destination__options{
+        margin-bottom: 20px;
+
+        ul{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            gap: 26px;
+            text-transform: uppercase;
+            font-size: 14px;
+            letter-spacing: 2.36px;
+
+            li{
+            }
+        }
+    }
+
+    .main__h1{
+        font-size: 56px;
+    }
+
+    .destination__p{
+        font-size: 15px;
+        line-height: 25px;
+        width: 327px;
+        // max-width: 450px;
+        text-align: center;
+        margin: 0 auto;
+        margin-bottom: 32px;
+    }
+
+    .rectangulo{
+        width: 90%;
+        margin: 0 auto;
+        margin-bottom: 32px;
+        border-bottom: 1px solid $white;
+    }
+
+    .destination__info{
+        margin-bottom: 32px;
+        text-transform: uppercase;
+
+        p{
+            font-size: 14px;
+            // text-transform: uppercase;
+            letter-spacing: 2.36px;
+            margin-bottom: 12px;
+        }
+
+        span{
+            // text-transform: uppercase;
+            font-size: 28px;
+            color: $white;
         }
     }
 }
