Estilos bases de las paginas añadidas

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Bellefair&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Barlow&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -139,6 +136,7 @@ body {
   font-family: "Barlow Condensed", sans-serif;
   letter-spacing: 2.7px;
   margin-bottom: 32px;
+  font-weight: 400;
 }
 .main__destination h2 span {
   font-weight: 700;
@@ -156,19 +154,28 @@ body {
   height: auto;
 }
 .main__destination .destination__options {
-  margin-bottom: 20px;
+  margin-bottom: 12px;
 }
 .main__destination .destination__options ul {
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 26px;
+}
+.main__destination .destination__options ul li {
   text-transform: uppercase;
   font-size: 14px;
   letter-spacing: 2.36px;
+  color: hsl(231, 77%, 90%);
+  padding-bottom: 8px;
+}
+.main__destination .destination__options ul li:hover {
+  color: hsl(0, 0%, 100%);
+  border-bottom: 3px solid hsl(0, 0%, 100%);
 }
 .main__destination .main__h1 {
   font-size: 56px;
+  margin-bottom: 0;
 }
 .main__destination .destination__p {
   font-size: 15px;
@@ -177,12 +184,13 @@ body {
   text-align: center;
   margin: 0 auto;
   margin-bottom: 32px;
+  color: hsl(231, 77%, 90%);
 }
 .main__destination .rectangulo {
   width: 90%;
   margin: 0 auto;
   margin-bottom: 32px;
-  border-bottom: 1px solid hsl(0, 0%, 100%);
+  border-bottom: 1px solid hsl(231, 77%, 90%);
 }
 .main__destination .destination__info {
   margin-bottom: 32px;
@@ -192,6 +200,7 @@ body {
   font-size: 14px;
   letter-spacing: 2.36px;
   margin-bottom: 12px;
+  color: hsl(231, 77%, 90%);
 }
 .main__destination .destination__info span {
   font-size: 28px;
@@ -213,6 +222,7 @@ body {
   font-family: "Barlow Condensed", sans-serif;
   letter-spacing: 2.7px;
   margin-bottom: 32px;
+  font-weight: 400;
 }
 .main__crew .crew__title span {
   font-weight: 700;
@@ -222,7 +232,7 @@ body {
 .main__crew .crew__img {
   width: 327px;
   height: 223px;
-  border-bottom: 1px solid hsl(0, 0%, 100%);
+  border-bottom: 1px solid hsl(231, 77%, 90%);
   margin: 0 auto;
   margin-bottom: 26px;
 }
@@ -231,7 +241,7 @@ body {
   height: 100%;
 }
 .main__crew .crew__options {
-  margin-bottom: 20px;
+  margin-bottom: 32px;
 }
 .main__crew .crew__options ul {
   display: flex;
@@ -247,25 +257,36 @@ body {
   border-radius: 50px;
   background-color: hsl(231, 77%, 90%);
 }
+.main__crew .crew__options ul li:active {
+  background-color: hsl(0, 0%, 100%);
+}
+.main__crew .crew__options ul li:hover {
+  background-color: hsl(0, 0%, 100%);
+}
 .main__crew .crew__h2 {
   font-family: "Bellefair", serif;
   font-size: 16px;
   color: hsl(0, 0%, 100%);
   text-transform: uppercase;
+  font-weight: 400;
+  opacity: 49%;
+  margin-bottom: 8px;
 }
 .main__crew .crew__h1 {
   font-family: "Bellefair", serif;
   font-size: 24px;
   text-transform: uppercase;
   color: hsl(0, 0%, 100%);
+  font-weight: 400;
+  margin-bottom: 16px;
 }
 .main__crew .crew__p {
   font-size: 15px;
   line-height: 25px;
   width: 327px;
+  color: hsl(231, 77%, 90%);
   text-align: center;
   margin: 0 auto;
-  margin-bottom: 104px;
 }
 
 .technology {
@@ -283,6 +304,7 @@ body {
   font-family: "Barlow Condensed", sans-serif;
   letter-spacing: 2.7px;
   margin-bottom: 32px;
+  font-weight: 400;
 }
 .main__technology .technology__title span {
   font-weight: 700;
@@ -293,7 +315,7 @@ body {
   width: 100%;
   height: auto;
   margin: 0 auto;
-  margin-bottom: 26px;
+  margin-bottom: 34px;
 }
 .main__technology .technology__img img {
   width: 100%;
@@ -307,20 +329,27 @@ body {
   flex-direction: row;
   justify-content: center;
   gap: 26px;
-  text-transform: uppercase;
-  font-size: 14px;
-  letter-spacing: 2.36px;
 }
 .main__technology .technology__options ul li {
+  text-transform: uppercase;
+  letter-spacing: 2.36px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
   background-color: transparent;
-  border: 1px solid hsl(0, 0%, 100%);
+  border: 1px solid hsl(231, 77%, 90%);
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 16px;
+}
+.main__technology .technology__options ul li:hover {
+  color: hsl(230, 35%, 7%);
+  background-color: white;
+}
+.main__technology .technology__options ul li:active {
+  color: hsl(230, 35%, 7%);
+  background-color: white;
 }
 .main__technology .technology__data {
   width: 327px;
@@ -332,14 +361,19 @@ body {
   font-family: "Barlow Condensed", sans-serif;
   letter-spacing: 2.36px;
   margin-bottom: 9px;
+  font-weight: 400;
+  color: hsl(231, 77%, 90%);
 }
 .main__technology .technology__data .technology__h1 {
   text-transform: uppercase;
   font-size: 24px;
+  font-weight: 400;
+  color: hsl(0, 0%, 100%);
   font-family: "Bellefair", serif;
 }
 .main__technology .technology__data .technology__p {
   font-size: 15px;
   line-height: 25px;
   margin-top: 16px;
+  color: hsl(231, 77%, 90%);
 }/*# sourceMappingURL=style.css.map */
