--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Bellefair&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Bellefair&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
 
 *{
     margin: 0;
