--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,7 +2,7 @@
 
 // Colors
 $body-bg: hsl(230, 35, 7);
-$sky: hsl(231, 77, 90);
+$sky: hsl(231, 76%, 90%);
 $white: hsl(0, 0, 100);
 
 // Typography
