--- a/sass/pages/_crew.scss
+++ b/sass/pages/_crew.scss
@@ -11,7 +11,8 @@
     .crew__title{
         color: $white;
         text-transform: uppercase;
-        // margin-left: 18px;
+        text-align: center;
+        margin-left: 0;
         font-size: 16px;
         font-family: 'Barlow Condensed', sans-serif;
         letter-spacing: 2.7px;
@@ -93,8 +94,78 @@
         color: $sky;
         text-align: center;
         margin: 0 auto;
-        // max-width: 450px;
-        // margin-bottom: 104px;
     }
 
+}
+
+@media screen and (min-width:768px) {
+    .crew{
+        background-image: url('/assets/crew/background-crew-tablet.jpg');
+        height: 100%;
+    }
+    
+    .main__crew{
+        margin-top: 0;
+        max-width: 100%;
+        position: relative;
+        display: grid;
+        grid-template-areas: 
+        "number"
+        "role"
+        "name"
+        "description"
+        "options"
+        "imagen";
+    
+        .crew__title{
+            text-align: left;
+            margin-left: 39px;
+            margin-top: 40px;
+            margin-bottom: 60px;
+            grid-area: number;
+            font-size: 20px;
+            letter-spacing: 3.38px;
+    
+            span{
+                margin-right: 16px;
+            }
+        }
+    
+        .crew__img{
+            width: 457px;
+            height: 572px;
+            border-bottom: none;
+            margin-bottom: 0;
+            grid-area: imagen;
+    
+            img{
+                width: auto;
+                height: 100%;
+            }
+        }
+    
+        .crew__options{
+            grid-area: options;
+            margin-bottom: 40px;
+        }
+    
+        .crew__h2{
+            grid-area: role;
+            font-size: 24px;
+        }
+    
+        .crew__h1{
+            grid-area: name;
+            font-size: 40px;
+        }
+    
+        .crew__p{
+            grid-area: description;
+            width: 458px;
+            font-size: 16px;
+            line-height: 28px;
+            margin-bottom: 40px;
+        }
+    
+    }
 }
